# solr-mcp

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  SYSTEM_DETAILS.md  pyproject.toml
examples/: docker-compose.yml  example_queries.json
src/solr_mcp_server/: __init__.py  __main__.py  config.py  main.py  server.py  solr_client.py
src/solr_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/functional/: test_integration.py
tests/unit/: test_config.py  test_solr_client.py
